// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCard /> should not render when no product could be found 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)>
    <ProductCard
      className={null}
      dispatch={[Function]}
      product={null}
      render={[Function]}
      shadow={true}
      style={{}}
    />
  </Connect(ProductCard)>
</Provider>
`;

exports[`<ProductCard /> should render as expected 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)
    productId="PR0DUCTID"
  >
    <ProductCard
      className={null}
      dispatch={[Function]}
      product={
        {
          "featuredImageBaseUrl": null,
          "featuredImageUrl": null,
          "id": "PR0DUCTID",
          "name": "Product Name",
          "price": {
            "currency": "EUR",
            "discount": 50,
            "info": "Price Info",
            "unitPrice": 5,
            "unitPriceStriked": 10,
          },
          "rating": {
            "average": 80,
            "count": 4,
            "reviewCount": 3,
          },
        }
      }
      productId="PR0DUCTID"
      render={[Function]}
      shadow={true}
      style={{}}
    >
      <Card
        className="theme__product-card"
        component="section"
        data-test-id="Product: Product Name"
        style={{}}
      >
        <Paper
          background="var(--sg-components-cards-backgroundColor)"
          border="var(--sg-components-cards-border)"
          borderRadius="var(--sg-shape-cardsBorderRadius)"
          className="sg-5e7qca-Card-root engage__card ui-shared__card theme__product-card"
          component="section"
          data-test-id="Product: Product Name"
          elevation="medium"
          shadowColor="var(--sg-components-cards-shadowColor)"
          square={false}
          style={{}}
          variant="elevation"
        >
          <section
            className="engage__paper engage__card ui-shared__card theme__product-card sg-1k2lror-Paper-root-Card-root"
            data-test-id="Product: Product Name"
            style={{}}
          >
            <ProductCard
              dispatch={[Function]}
              product={
                {
                  "featuredImageBaseUrl": null,
                  "featuredImageUrl": null,
                  "id": "PR0DUCTID",
                  "name": "Product Name",
                  "price": {
                    "currency": "EUR",
                    "discount": 50,
                    "info": "Price Info",
                    "unitPrice": 5,
                    "unitPriceStriked": 10,
                  },
                  "rating": {
                    "average": 80,
                    "count": 4,
                    "reviewCount": 3,
                  },
                }
              }
              productId="PR0DUCTID"
              url="/item/505230445543544944"
            />
          </section>
        </Paper>
      </Card>
    </ProductCard>
  </Connect(ProductCard)>
</Provider>
`;

exports[`<ProductCard /> should render with a custom render prop 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(ProductCard)
    productId="PR0DUCTID"
    render={[Function]}
  >
    <ProductCard
      className={null}
      dispatch={[Function]}
      product={
        {
          "featuredImageBaseUrl": null,
          "featuredImageUrl": null,
          "id": "PR0DUCTID",
          "name": "Product Name",
          "price": {
            "currency": "EUR",
            "discount": 50,
            "info": "Price Info",
            "unitPrice": 5,
            "unitPriceStriked": 10,
          },
          "rating": {
            "average": 80,
            "count": 4,
            "reviewCount": 3,
          },
        }
      }
      productId="PR0DUCTID"
      render={[Function]}
      shadow={true}
      style={{}}
    >
      <Card
        className="theme__product-card"
        component="section"
        data-test-id="Product: Product Name"
        style={{}}
      >
        <Paper
          background="var(--sg-components-cards-backgroundColor)"
          border="var(--sg-components-cards-border)"
          borderRadius="var(--sg-shape-cardsBorderRadius)"
          className="sg-5e7qca-Card-root engage__card ui-shared__card theme__product-card"
          component="section"
          data-test-id="Product: Product Name"
          elevation="medium"
          shadowColor="var(--sg-components-cards-shadowColor)"
          square={false}
          style={{}}
          variant="elevation"
        >
          <section
            className="engage__paper engage__card ui-shared__card theme__product-card sg-1k2lror-Paper-root-Card-root"
            data-test-id="Product: Product Name"
            style={{}}
          >
            <div>
              Custom Output
            </div>
          </section>
        </Paper>
      </Card>
    </ProductCard>
  </Connect(ProductCard)>
</Provider>
`;
